[project]
name = "pyprj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "plotly>=6.5.2",
    "pyinstaller>=6.18.0",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
]
